--- a/slides.html
+++ b/slides.html
@@ -48,7 +48,7 @@
                   <a class="nav-link" href="slides.html">Slides</a>
                 </li>
                   <li class="nav-item px-2">
-                    <a class="nav-link" href="#">Accessories</a>
+                    <a class="nav-link" href="accessories.html">Accessories</a>
                 </li>
                   <li class="nav-item px-2">
                     <a class="nav-link" href="#">Blogs</a>
@@ -207,7 +207,7 @@
                 <a class="nav-link1" href="slides.html">Slides</a>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link1" href="#">Accessories</a>
+                <a class="nav-link1" href="accessories.html">Accessories</a>
               </li>
               <li class="nav-item px-2">
                 <a class="nav-link1" href="#">Blogs</a>
