--- a/atc_details.html
+++ b/atc_details.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="slides.html">Slides</a>
               </li>
                 <li class="nav-item px-2">
-                  <a class="nav-link" href="#">Accessories</a>
+                  <a class="nav-link" href="accessories.html">Accessories</a>
               </li>
                 <li class="nav-item px-2">
                   <a class="nav-link" href="#">Blogs</a>
@@ -109,7 +109,7 @@
                   <button class="size-button" onclick="setSize('12', this)">12</button>
                 </div>
                 <div class="col-12 my-2 mb-5">
-                  <button class="add-to-cart-button" onclick="addToCart('Nike LeBron NXXT Gen dsaEP', 7116, 'img/shoe2.jpg', selectedSize)">Add to Cart</button>
+                  <button class="add-to-cart-button" onclick="addToCart('Nike LeBron NXXT Gen EP', 7116, 'img/shoe2.jpg', selectedSize)">Add to Cart</button>
                 </div>
               </div>
           </div>
@@ -179,7 +179,7 @@
                 <a class="nav-link1" href="slides.html">Slides</a>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link1" href="#">Accessories</a>
+                <a class="nav-link1" href="accessories.html">Accessories</a>
               </li>
               <li class="nav-item px-2">
                 <a class="nav-link1" href="#">Blogs</a>
