--- a/apparels.html
+++ b/apparels.html
@@ -50,7 +50,7 @@
                       <a class="nav-link" href="accessories.html">Accessories</a>
                   </li>
                   <li class="nav-item px-2">
-                      <a class="nav-link" href="#">Blogs</a>
+                      <a class="nav-link" href="blogs.html">Blogs</a>
                   </li>
               </ul>
           </div>
@@ -74,7 +74,6 @@
         <div class="row">
             <div class="box">
                 <div class="col-md-3 col-sm-6">
-                <a href="atc_details.html">
                 <div class="card border-0">
                     <img src="img/a1.jpg" class="img-fluid" alt="">
                     <div class="card-body">
@@ -83,7 +82,6 @@
                         <h4 class="primary">₱5,995.00</h4>
                     </div>
                 </div>
-                </a>
                 </div>
             </div>
             <div class="box">
@@ -293,7 +291,7 @@
               <a class="nav-link1" href="accessories.html">Accessories</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link1" href="#">Blogs</a>
+              <a class="nav-link1" href="blogs.html">Blogs</a>
             </li>
           </ul>
               <div class="row">
