--- a/atc_details.html
+++ b/atc_details.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="accessories.html">Accessories</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="#">Blogs</a>
+                    <a class="nav-link" href="blogs.html">Blogs</a>
                 </li>
             </ul>
         </div>
@@ -181,7 +181,7 @@
                 <a class="nav-link1" href="accessories.html">Accessories</a>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link1" href="#">Blogs</a>
+                <a class="nav-link1" href="blogs.html">Blogs</a>
               </li>
             </ul>
                 <div class="row">
