--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="accessories.html">Accessories</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" href="#">Blogs</a>
+                        <a class="nav-link" href="blogs.html">Blogs</a>
                     </li>
                 </ul>
             </div>
@@ -231,7 +231,6 @@
   <h1 class="primary_title mt-5">Payday Sale!!! &nbsp; ⮞</h1>
   <div class="row">
     <div class="col-md-6 col-lg-3">
-      <a href="atc_details.html">
       <div class="card border-0">
         <img src="img/sale1.jpg" alt="">
           <div class="card-body">
@@ -240,7 +239,6 @@
               <div><span class="primary_sale">₱696.50</span> &nbsp;<span  class="primary_cross">₱995.00</span></div>
           </div>
       </div>
-    </a>
     </div>
     <div class="col-md-6 col-lg-3">
       <div class="card border-0">
