--- a/blogs.html
+++ b/blogs.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg fixed-top justify-content-center">
       <div class="container">
           <!-- Add custom CSS styles to the <img> element for resizing -->
-          <a class="navbar-brand" href="#"><img src="img/drip.png" class="img-fluid logo" alt="dripsole"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/drip.png" class="img-fluid logo" alt="dripsole"></a>
           <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarContent">
               <span class="navbar-toggler-icon"></span>
@@ -83,18 +83,18 @@
               <img src="img/v.jpg" class="img-fluid w-100" alt="">
             </div>
           </div>
-        <div class="col-md-4 my-4">
+        <div class="col-md-4 my-1">
           <div class="image">
             <img src="img/blog7.jpg" class="img-fluid w-100" alt="">
           </div>
         </div>
-        <div class="col-md-4 my-4">
+        <div class="col-md-4 my-1">
           <div class="image">
             <img src="img/blog6.jpg" class="img-fluid w-100" alt="">
           </div>
         </div>
        
-        <div class="col-md-4 my-4">
+        <div class="col-md-4 my-1">
           <div class="image">
             <img src="img/blog8.jpg" class="img-fluid w-100" alt="">
           </div>
