--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <h3 class="card-title text-center mx-3 primary_title1">Air Jordan 2 <br> Retro Low SP</h3>
        
             <div class="card-content secondary text-center  ">
-              Spread the love. Tell the stories. Step into greatness.
+              Spread the love. Tell the stories. <br> Step into greatness.
             </div>
           </div>
         </div>
