--- a/footware.html
+++ b/footware.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg fixed-top justify-content-center">
       <div class="container">
           <!-- Add custom CSS styles to the <img> element for resizing -->
-          <a class="navbar-brand" href="#"><img src="img/drip.png" class="img-fluid logo" alt="dripsole"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/drip.png" class="img-fluid logo" alt="dripsole"></a>
           <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarContent">
               <span class="navbar-toggler-icon"></span>
