--- a/index.html
+++ b/index.html
@@ -22,37 +22,57 @@
 <body>
 
   <!-- NAVIGATION BAR -->
-<header>
+  <header>
     <nav class="navbar navbar-expand-lg fixed-top justify-content-center">
-        <div class="container">
-            <!-- Add custom CSS styles to the <img> element for resizing -->
-            <a class="navbar-brand" href="#"><img src="img/drip.png" class="img-fluid logo" alt="dripsole"></a>
-            <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="color navbar-nav mx-auto">
-                    <li class="nav-item px-2">
-                        <a class="nav-link" href="footware.html">Footwear</a>
-                    </li>
-                    <li class="nav-item px-2">
-                        <a class="nav-link" href="apparels.html">Apparels</a>
-                    </li>
-                    <li class="nav-item px-2">
-                        <a class="nav-link" href="slides.html">Slides</a>
-                    </li>
-                    <li class="nav-item px-2">
-                        <a class="nav-link" href="accessories.html">Accessories</a>
-                    </li>
-                    <li class="nav-item px-2">
-                        <a class="nav-link" href="blogs.html">Blogs</a>
-                    </li>
-                </ul>
+      <div class="container">
+          <a class="navbar-brand" href="index.html"><img src="img/drip.png" class="img-fluid logo" alt="dripsole"></a>
+          <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarContent">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarContent">
+              <ul class="color navbar-nav mx-auto">
+                <li class="nav-item px-2">
+                  <a class="nav-link" href="index.html">Home</a>
+              </li>
+                  <li class="nav-item px-2">
+                      <a class="nav-link" href="footware.html">Footwear</a>
+                  </li>
+                  <li class="nav-item px-2">
+                      <a class="nav-link" href="apparels.html">Apparels</a>
+                  </li>
+                  <li class="nav-item px-2">
+                      <a class="nav-link" href="slides.html">Slides</a>
+                  </li>
+                  <li class="nav-item px-2">
+                      <a class="nav-link" href="accessories.html">Accessories</a>
+                  </li>
+                  <li class="nav-item px-2">
+                      <a class="nav-link" href="blogs.html">Blogs</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+      <div class="cart-container ">
+        <!-- Shopping Cart Icon -->
+        <div class="cart-icon" onclick="toggleCart()"><i class="fa-solid fa-cart-shopping"></i>
+            <div class="cart-notification" id="cart-notification">0</div>
+        </div>
+        <!-- Shopping Cart -->
+        <div class="cart" id="cart">
+            <div id="cart-items">
+              
+                <!-- Cart items will be displayed here -->
+            </div>
+            <p class="primary1">Total: <span id="cart-total">0.00</span></p>
+            <div class="row">
+              <div class="col-6"><button class="checkout-button">Checkout</button></div>
+              <div class="col-6"><button class="view-cart-button" onclick="toggleCart()">View Cart</button></div>
             </div>
         </div>
-    </nav>
-</header>
+    </div>
+  </nav>
+  </header>
 
 <!--END OF NAVIGATION BAR -->
 
